Overflow fixed

--- a/src/styles/schedule.scss
+++ b/src/styles/schedule.scss
@@ -1,9 +1,9 @@
 .schedule-content{
     background: #1881c3;
-    min-height: 100%;
-    padding: 100px 0px;
+    height: 100vh;
+    padding: 40px 0px;
     @media screen and (max-width: 750px){
-        padding: 10px 0px;
+        padding: 10px 0px 0px;
     }
 }
 
@@ -14,7 +14,7 @@
     box-shadow: 0px 0px 50px -14px;
     border-radius: 20px;
     font-family: Raleway;
-    max-height: 90vh;
+    height: 90vh;
 }
 
 .schedule-box-padding{
@@ -55,6 +55,7 @@
     padding: 50px 30px;
     display: inline-block;
     width: 25%;
+    height: 100%;
     @media screen and (max-width: 750px){
         padding: 10px 0px;
     }
@@ -78,6 +79,8 @@
     width: 80%;
     vertical-align: top;
     padding-bottom: 50px;
+    height: 100%;
+    overflow-y: scroll;
     @media screen and (max-width: 750px){
         width: 100%;
         border-width: 2px 0px 0px;
@@ -119,10 +122,12 @@
 .tabs-pane-container{
     width: 100%;
     overflow-x: hidden;
+    height: calc(100% - 112px);
 }
 
 .tabs-pane-carousel{
     transition-duration: 1s;
+    height: 100%;
 }
 
 .schedule-card-box{
